emily starts log

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Emily</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Emily's quick lesson feelings</title>
   </head>
   <body>
-    <p>hi</p>
+    <h1>Quick Lesson Feelings - Emily</h1>
+    <h2>A little progress journal</h2>
+    <h3>October 16, 2018</h3>
+    <p>First pari program session with Billy Pittman, practiced git collaboration. Also, working in Sinatra forms labs, learning about views and controllers, and how to render page views.<br>
+    <span>Feeling: Stressed Today, Debugging is Calming</span>
+    </p>
   </body>
 </html>
