--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Emily's quick lesson feelings</title>
+    <title>Emily and Billy: Feelings Friday Everyday</title>
   </head>
   <body>
-    <h1>Quick Lesson Feelings - Emily</h1>
-    <h2>A little progress journal</h2>
+    <h1>Feelings Friday Everyday</h1>
+    <h2>A little progress journal for Billy and Emily to compare learning feelings</h2><br>
+  <!-- Billy's log goes like this:
+    <h3>Billy</h3>
+    <h3>October xx, 2018</h3>
+    <p></p><br>
+    <span></span>
+  -->
+    <h3>Emily</h3>
+    <h3>October 17, 2018</h3>
+    <p>Stressful day at work, hard to get everything in a day done. But somehow I did a couple Learn.co lessons anyway.<br>
+    <span>Feeling: Exhausted, Coding Completes the Day</span>
+    <h3>Emily</h3>
     <h3>October 16, 2018</h3>
-    <p>First pari program session with Billy Pittman, practiced git collaboration. Also, working in Sinatra forms labs, learning about views and controllers, and how to render page views.<br>
+    <p>First pair program session with Billy Pittman, practiced git collaboration. Also, working in Sinatra forms labs, learning about views and controllers, and how to render page views.<br>
     <span>Feeling: Stressed Today, Debugging is Calming</span>
     </p>
   </body>
