--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   -->
     <h3>Emily</h3>
     <h3>October 17, 2018</h3>
-    <p>Stressful day at work, hard to get everything in a day done. But somehow I did a couple Learn.co lessons anyway.<br>
+    <p>Stressful day at work, hard to get everything in a day done. But somehow I did a couple Learn.co lessons anyway. I made my first post from a form to a view today and that was a true milestone!<br>
     <span>Feeling: Exhausted, Coding Completes the Day</span>
     <h3>Emily</h3>
     <h3>October 16, 2018</h3>
