--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <span></span>
   -->
     <h3>Emily</h3>
+    <h3>October 20, 2018</h3>
+    <p>Been a rough week in general. Learned last night that this program is really what's generally keeping me hopeful.<br>
+    <span>Accomplished, but way too slow</span>
+    <h3>Emily</h3>
     <h3>October 17, 2018</h3>
     <p>Stressful day at work, hard to get everything in a day done. But somehow I did a couple Learn.co lessons anyway. I made my first post from a form to a view today and that was a true milestone!<br>
     <span>Feeling: Exhausted, Coding Completes the Day</span>
