--- a/index.html
+++ b/index.html
@@ -11,17 +11,30 @@
   <!-- Billy's log goes like this:
     <h3>Billy</h3>
     <h3>October xx, 2018</h3>
-    <p></p><br>
+    <p></p>
+    <br>
     <span></span>
+    <br>
   -->
+    <h3>Emily</h3>
+    <h3>October 29, 2018</h3>
+    <p>Learned how to authenticate a user and password and then how to create a database of recipes - feeling pretty amazing right now. Learning so much every day. Realized I’d written a dissertation in college about AI and here I am.</p>
+    <br>
+    <span>Anxious to move forward and make something big</span>
+    <br>
+
     <h3>Emily</h3>
     <h3>October 20, 2018</h3>
     <p>Been a rough week in general. Learned last night that this program is really what's generally keeping me hopeful.<br>
     <span>Accomplished, but way too slow</span>
+    <br>
+
     <h3>Emily</h3>
     <h3>October 17, 2018</h3>
     <p>Stressful day at work, hard to get everything in a day done. But somehow I did a couple Learn.co lessons anyway. I made my first post from a form to a view today and that was a true milestone!<br>
     <span>Feeling: Exhausted, Coding Completes the Day</span>
+    <br>
+
     <h3>Emily</h3>
     <h3>October 16, 2018</h3>
     <p>First pair program session with Billy Pittman, practiced git collaboration. Also, working in Sinatra forms labs, learning about views and controllers, and how to render page views.<br>
