--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <br>
   -->
     <h3>Emily</h3>
+    <h3>October 31, 2018</h3>
+    <p>The Playlister Sinatra lab looks so confusing and I will be really shocked when I ever finish it. Somehow!</p>
+    <br>
+    <span>Determined - somehow!</span>
+    <br>
+
+
+    <h3>Emily</h3>
     <h3>October 29, 2018</h3>
     <p>Learned how to authenticate a user and password and then how to create a database of recipes - feeling pretty amazing right now. Learning so much every day. Realized I’d written a dissertation in college about AI and here I am.</p>
     <br>
