--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <br>
   -->
     <h3>Emily</h3>
+    <h3>Nov. 4, 2018</h3>
+    <p>Started pair programming with Bekah on Fwitter, super fun and confusing too!</p>
+    <br>
+    <span>Feeling like I can totally do this</span>
+    <br>
+
+
+    <h3>Emily</h3>
     <h3>October 31, 2018</h3>
     <p>The Playlister Sinatra lab looks so confusing and I will be really shocked when I ever finish it. Somehow!</p>
     <br>
