--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <h1>Feelings Friday Everyday</h1>
     <h2>A little progress journal for Billy and Emily to compare learning feelings</h2><br>
   <!-- Billy's log goes like this:
-    <h3>Billy</h3>
-    <h3>October xx, 2018</h3>
-    <p></p>
-    <br>
-    <span></span>
-    <br>
+    <div class="Log_Entry">
+      <h3>Billy</h3>
+      <h3>Month xx, 2018</h3>
+      <p>update</p>
+      <br>
+      <span>general feelings</span>
+    </div>
+
   -->
     <div class="Log_Entry">
       <h3>Emily</h3>
@@ -61,6 +63,6 @@
       <span>Feeling: Stressed Today, Debugging is Calming</span>
       </p>
     </div>
-    
+
   </body>
 </html>
