--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h3>Month xx, 2018</h3>
       <p>update</p>
       <br>
-      <span>general feelings</span>
+      <span>Feeling: xyz</span>
     </div>
 
   -->
@@ -23,7 +23,7 @@
       <h3>Nov. 4, 2018</h3>
       <p>Started pair programming with Bekah on Fwitter, super fun and confusing too!</p>
       <br>
-      <span>Feeling like I can totally do this</span>
+      <span>Feeling: like I can totally do this</span>
     </div>
 
     <div class="Log_Entry">
@@ -31,7 +31,7 @@
       <h3>October 31, 2018</h3>
       <p>The Playlister Sinatra lab looks so confusing and I will be really shocked when I ever finish it. Somehow!</p>
       <br>
-      <span>Determined - somehow!</span>
+      <span>Feeling: Determined - somehow!</span>
     </div>
 
     <div class="Log_Entry">
@@ -39,14 +39,14 @@
       <h3>October 29, 2018</h3>
       <p>Learned how to authenticate a user and password and then how to create a database of recipes - feeling pretty amazing right now. Learning so much every day. Realized I’d written a dissertation in college about AI and here I am.</p>
       <br>
-      <span>Anxious to move forward and make something big</span>
+      <span>Feeling: Anxious to move forward and make something big</span>
     </div>
 
     <div class="Log_Entry">
       <h3>Emily</h3>
       <h3>October 20, 2018</h3>
       <p>Been a rough week in general. Learned last night that this program is really what's generally keeping me hopeful.<br>
-      <span>Accomplished, but way too slow</span>
+      <span>Feeling: Accomplished, but way too slow</span>
     </div>
 
     <div class="Log_Entry">
