--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="Log_Entry">
       <h3>Billy</h3>
       <h3>Month xx, 2018</h3>
-      <p>update</p>
+      <p>update 1-3 sentences</p>
+      </br>
       <span>Feeling: xyz</span>
     </div>
 
@@ -21,13 +22,16 @@
       <h3>Emily</h3>
       <h3>Nov. 4, 2018</h3>
       <p>Started pair programming with Bekah on Fwitter, super fun and confusing too!</p>
+      </br>
       <span>Feeling: like I can totally do this</span>
+
     </div>
 
     <div class="Log_Entry">
       <h3>Emily</h3>
       <h3>October 31, 2018</h3>
       <p>The Playlister Sinatra lab looks so confusing and I will be really shocked when I ever finish it. Somehow!</p>
+      </br>
       <span>Feeling: Determined - somehow!</span>
     </div>
 
@@ -35,29 +39,32 @@
       <h3>Emily</h3>
       <h3>October 29, 2018</h3>
       <p>Learned how to authenticate a user and password and then how to create a database of recipes - feeling pretty amazing right now. Learning so much every day. Realized I’d written a dissertation in college about AI and here I am.</p>
+      </br>
       <span>Feeling: Anxious to move forward and make something big</span>
     </div>
 
     <div class="Log_Entry">
       <h3>Emily</h3>
       <h3>October 20, 2018</h3>
-      <p>Been a rough week in general. Learned last night that this program is really what's generally keeping me hopeful.<br>
+      <p>Been a rough week in general. Learned last night that this program is really what's generally keeping me hopeful.</p>
+      </br>
       <span>Feeling: Accomplished, but way too slow</span>
     </div>
 
     <div class="Log_Entry">
       <h3>Emily</h3>
       <h3>October 17, 2018</h3>
-      <p>Stressful day at work, hard to get everything in a day done. But somehow I did a couple Learn.co lessons anyway. I made my first post from a form to a view today and that was a true milestone!<br>
+      <p>Stressful day at work, hard to get everything in a day done. But somehow I did a couple Learn.co lessons anyway. I made my first post from a form to a view today and that was a true milestone!</p>
+      </br>
       <span>Feeling: Exhausted, Coding Completes the Day</span>
     </div>
 
     <div class="Log_Entry">
       <h3>Emily</h3>
       <h3>October 16, 2018</h3>
-      <p>First pair program session with Billy Pittman, practiced git collaboration. Also, working in Sinatra forms labs, learning about views and controllers, and how to render page views.<br>
+      <p>First pair program session with Billy Pittman, practiced git collaboration. Also, working in Sinatra forms labs, learning about views and controllers, and how to render page views.</p>
+      </br>
       <span>Feeling: Stressed Today, Debugging is Calming</span>
-      </p>
     </div>
 
   </body>
