--- a/index_new.html
+++ b/index_new.html
@@ -21,6 +21,14 @@
   -->
 
     <div class="Log_Entry">
+      <h3>Emily</h3>
+      <h3>November 16, 2018</h3>
+      <p>Pair programming with Billy and it's so much fun.</p>
+      </br>
+      <span>Feeling: Happy</span>
+    </div>
+
+    <div class="Log_Entry">
       <h3>Billy</h3>
       <h3>Nov. 16, 2018</h3>
       <p>First Commit! Things are starting to make sense, kinda.</p>
