--- a/index_new.html
+++ b/index_new.html
@@ -25,7 +25,7 @@
       <h3>November 16, 2018</h3>
       <p>Pair programming with Billy and it's so much fun.</p>
       </br>
-      <span>Feeling: Happy</span>
+      <span>Feeling: Happy!!!</span>
     </div>
 
     <div class="Log_Entry">
