--- a/index_new.html
+++ b/index_new.html
@@ -22,6 +22,14 @@
 
     <div class="Log_Entry">
       <h3>Emily</h3>
+      <h3>November 22, 2018</h3>
+      <p>I spent Thanksgiving day blogging, working on my portfolio website, and getting through some rails lessons.</p>
+      </br>
+      <span>Feeling: Full</span>
+    </div>
+
+    <div class="Log_Entry">
+      <h3>Emily</h3>
       <h3>November 16, 2018</h3>
       <p>Pair programming with Billy and it's so much fun.</p>
       </br>
