--- a/index_new.html
+++ b/index_new.html
@@ -19,6 +19,13 @@
     </div>
 
   -->
+    <div class="Log_Entry">
+      <h3>Emily</h3>
+      <h3>December 6, 2018</h3>
+      <p>Most exhausting week of 2018, but I am pushing through. Coding every day.</p>
+      </br>
+      <span>Feeling: Dead</span>
+    </div>
 
     <div class="Log_Entry">
       <h3>Emily</h3>
