--- a/index_new.html
+++ b/index_new.html
@@ -19,6 +19,14 @@
     </div>
 
   -->
+  <div class="Log_Entry">
+    <h3>Emily</h3>
+    <h3>December 18, 2018</h3>
+    <p>I am feeling very weird these days, very much living in the unknown - but this is making me code even more and go even faster through this program. I even had a job interview last week to be a dev! Milestones.</p>
+    </br>
+    <span>Feeling: Uncertain but Driven</span>
+  </div>
+
     <div class="Log_Entry">
       <h3>Emily</h3>
       <h3>December 6, 2018</h3>
