--- a/index_new.html
+++ b/index_new.html
@@ -19,6 +19,15 @@
     </div>
 
   -->
+
+  <div class="Log_Entry">
+    <h3>Emily</h3>
+    <h3>December 19, 2018</h3>
+    <p>Uncertain times still but so much hope today for the future!</p>
+    </br>
+    <span>Feeling: Hopeful</span>
+  </div>
+
   <div class="Log_Entry">
     <h3>Emily</h3>
     <h3>December 18, 2018</h3>
